--- a/app/src/main/res/layout/activity_read_post.xml
+++ b/app/src/main/res/layout/activity_read_post.xml
@@ -1,10 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.example.cobeosijek.nkkutjevo.ui.home.activities.ReadPostActivity">
 
-</android.support.constraint.ConstraintLayout>
+    <!--<include layout="@layout/toolbar"/>-->
+
+    <TextView
+        android:id="@id/read_post_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="0dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
+        android:textAlignment="center"
+        android:textColor="@color/imageDetailsBackground"
+        android:textSize="16sp"/>
+
+    <ImageView
+        android:id="@id/read_post_image"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_margin="20dp"
+        android:scaleType="centerCrop"/>
+
+    <ScrollView
+        android:id="@id/read_post_scroll_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <TextView
+            android:id="@id/read_post_message"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:textColor="@color/imageDetailsBackground"
+            android:textSize="14sp"/>
+    </ScrollView>
+
+</LinearLayout>
