--- a/app/src/main/res/layout/activity_read_post.xml
+++ b/app/src/main/res/layout/activity_read_post.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/header_background"
     android:orientation="vertical"
     tools:context="com.example.cobeosijek.nkkutjevo.ui.home.activities.ReadPostActivity">
 
@@ -17,14 +17,14 @@
         android:layout_marginTop="10dp"
         android:textAlignment="center"
         android:textColor="@color/imageDetailsBackground"
-        android:textSize="16sp"/>
+        android:textSize="16sp" />
 
     <ImageView
         android:id="@id/read_post_image"
         android:layout_width="match_parent"
         android:layout_height="250dp"
         android:layout_margin="20dp"
-        android:scaleType="centerCrop"/>
+        android:scaleType="centerCrop" />
 
     <ScrollView
         android:id="@id/read_post_scroll_view"
@@ -36,8 +36,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
-            android:textColor="@color/imageDetailsBackground"
-            android:textSize="14sp"/>
+            android:textColor="@color/white"
+            android:textSize="18sp" />
     </ScrollView>
 
 </LinearLayout>
