--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,30 +1,31 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical"
-              tools:context="com.example.cobeosijek.nkkutjevo.ui.home.fragments.HomeFragment">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context="com.example.cobeosijek.nkkutjevo.ui.home.fragments.HomeFragment">
 
     <android.support.v4.view.ViewPager
         android:id="@id/home_view_pager"
         android:layout_width="match_parent"
         android:layout_height="290dp"
         android:layout_marginBottom="10dp"
-        android:background="@color/recyclerItemBackground"/>
+        android:background="@color/recyclerItemBackground" />
 
     <RelativeLayout
         android:id="@id/next_game_layout"
         android:layout_width="match_parent"
-        android:layout_height="300dp">
+        android:layout_height="300dp"
+        android:background="@drawable/header_background">
 
         <TextView
             android:id="@id/next_game_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_margin="20dp"
             android:text="@string/next_game_text"
-            android:textSize="20sp"/>
+            android:textColor="@color/white"
+            android:textSize="20sp" />
 
         <TextView
             android:id="@id/vs"
@@ -34,21 +35,22 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="35dp"
             android:text="@string/vs_text"
-            android:textSize="20sp"/>
+            android:textColor="@color/white"
+            android:textSize="20sp" />
 
         <ImageView
             android:id="@id/home_team_image"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_below="@id/next_game_text"
-            android:layout_toStartOf="@id/next_game_text"/>
+            android:layout_toStartOf="@id/next_game_text" />
 
         <ImageView
             android:id="@id/away_team_image"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_below="@id/next_game_text"
-            android:layout_toEndOf="@id/next_game_text"/>
+            android:layout_toEndOf="@id/next_game_text" />
 
         <TextView
             android:id="@id/next_game_date"
@@ -58,7 +60,8 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="10dp"
             android:text="Next game date"
-            android:textSize="20sp"/>
+            android:textColor="@color/white"
+            android:textSize="20sp" />
 
     </RelativeLayout>
 
