--- a/app/src/main/res/layout/home_pager_item.xml
+++ b/app/src/main/res/layout/home_pager_item.xml
@@ -1,23 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:id="@id/pager_item_layout"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical">
+    android:id="@id/pager_item_layout"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="20dp"
+    android:orientation="vertical">
 
     <ImageView
         android:id="@id/home_pager_item_image"
         android:layout_width="match_parent"
         android:layout_height="270dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/stadion"/>
+        android:src="@drawable/stadion" />
 
     <TextView
         android:id="@id/home_pager_item_title"
         android:layout_width="wrap_content"
         android:layout_height="20dp"
         android:layout_gravity="center"
-        android:textSize="16sp"
         android:gravity="center"
-        android:text="Title"/>
+        android:text="Title"
+        android:textSize="16sp" />
 </LinearLayout>
