--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,7 +9,6 @@
         android:id="@id/home_view_pager"
         android:layout_width="match_parent"
         android:layout_height="290dp"
-        android:layout_marginBottom="10dp"
         android:background="@color/recyclerItemBackground" />
 
     <RelativeLayout
@@ -59,9 +58,20 @@
             android:layout_below="@id/home_team_image"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="10dp"
+            android:inputType=""
             android:text="Next game date"
             android:textColor="@color/white"
             android:textSize="20sp" />
+
+        <Button
+            android:id="@id/map_button"
+            android:layout_width="150dp"
+            android:layout_height="40dp"
+            android:layout_below="@id/next_game_date"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="20dp"
+            android:text="Show on map"
+            />
 
     </RelativeLayout>
 
