--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -81,5 +81,6 @@
     <item name="read_post_scroll_view" type="id"/>
     <item name="read_post_message" type="id"/>
     <item name="news_recycler_view" type="id"/>
+    <item name="map_button" type="id"/>
 
 </resources>
