--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -14,7 +14,7 @@
     <RelativeLayout
         android:id="@id/next_game_layout"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="match_parent"
         android:background="@drawable/header_background">
 
         <TextView
@@ -70,8 +70,7 @@
             android:layout_below="@id/next_game_date"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp"
-            android:text="Show on map"
-            />
+            android:text="Show on map" />
 
     </RelativeLayout>
 
