--- a/app/src/main/res/layout/gallery_recycler_view_item.xml
+++ b/app/src/main/res/layout/gallery_recycler_view_item.xml
@@ -12,5 +12,6 @@
         android:layout_marginEnd="5dp"
         android:layout_marginStart="5dp"
         android:layout_marginTop="2dp"
-        android:background="@drawable/image_border"/>
+        android:background="@drawable/image_border"
+        android:scaleType="centerCrop"/>
 </LinearLayout>
